force-app/main/default/objects/Member__c/fields/Active_Pledge__c.field-meta.xml
<CustomField>
    <fullName>Active_Pledge__c</fullName>
    <formula>IF( Pledge_Amount__c &gt;0, True, False)</formula>
    <label>Active Pledge</label>
    <type>Checkbox</type>
</CustomField>