force-app/main/default/objects/Member__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person who actively contacts this person.</description>
    <inlineHelpText>This is the person who actively contacts this person.</inlineHelpText>
    <label>Agent</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>