force-app/main/default/objects/Member__c/fields/Deposited_Matching__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Matching__c</fullName>
    <inlineHelpText>Total Deposited Matching Amount</inlineHelpText>
    <label>Deposited Matching</label>
    <summarizedField>Donation__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Donation__c.Deposit_Status__c</field>
        <operation>equals</operation>
        <value>Deposited</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Donation__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Matching</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Donation__c.Status__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>