force-app/main/default/objects/Member__c/fields/Direct_Donations__c.field-meta.xml
<CustomField>
    <fullName>Direct_Donations__c</fullName>
    <inlineHelpText>Total Amount of Donations coming this from this person solely.</inlineHelpText>
    <label>Direct Donations</label>
    <summarizedField>Donation__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Donation__c.Status__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Donation__c.Deposit_Status__c</field>
        <operation>equals</operation>
        <value>Deposited</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Donation__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Soft Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Donation__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Matching</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>