force-app/main/default/objects/Member__c/fields/Ended_Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Ended_Total_Payments__c</fullName>
    <inlineHelpText>Ended Pledge Total Payments</inlineHelpText>
    <label>Total Payments</label>
    <summarizedField>Pledge__c.Total_Paymentss__c</summarizedField>
    <summaryFilterItems>
        <field>Pledge__c.Status__c</field>
        <operation>equals</operation>
        <value>Ended</value>
    </summaryFilterItems>
    <summaryForeignKey>Pledge__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>