force-app/main/default/objects/Member__c/fields/Event_Response__c.field-meta.xml
<CustomField>
    <fullName>Event_Response__c</fullName>
    <label>Event Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>