force-app/main/default/objects/Member__c/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <label>Groups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>NoGroup</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>