force-app/main/default/objects/Member__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Husband or wife of the member.</description>
    <label>Partner</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Members (Partner)</relationshipLabel>
    <relationshipName>Members1</relationshipName>
    <type>Lookup</type>
</CustomField>