force-app/main/default/objects/Member__c/fields/Payment_Card__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Card</label>
    <type>Checkbox</type>
</CustomField>