force-app/main/default/objects/Member__c/fields/Pending_Matching__c.field-meta.xml
<CustomField>
    <fullName>Pending_Matching__c</fullName>
    <label>Pending Matching</label>
    <summarizedField>Donation__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Donation__c.Deposit_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Donation__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Matching</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>