force-app/main/default/objects/Member__c/fields/Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Amount__c</fullName>
    <label>Pledge Amount</label>
    <summarizedField>Pledge__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Pledge__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Pledge__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>