force-app/main/default/objects/Member__c/fields/Pledged__c.field-meta.xml
<CustomField>
    <fullName>Pledged__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pledged</fullName>
                <default>true</default>
                <label>Pledged</label>
            </value>
            <value>
                <fullName>Payment Started</fullName>
            </value>
            <value>
                <fullName>Card Declined</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>