force-app/main/default/objects/Member__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <formula>IF( (Active_Pledge__c = True  &amp;&amp; Pledge_Amount__c - Total_Payments__c &gt; 0), Pledge_Amount__c - Total_Payments__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>