force-app/main/default/objects/Member__c/fields/Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Amount__c</fullName>
    <inlineHelpText>Friend or family member&apos;s donation amount that this person found or caused</inlineHelpText>
    <label>Soft Credit Amount</label>
    <summarizedField>Donation__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Donation__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Soft Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>