force-app/main/default/objects/Member__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <formula>Direct_Donations__c +  Soft_Credit_Amount__c +  Deposited_Matching__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Direct Donations plus Soft Credit</inlineHelpText>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>