force-app/main/default/objects/Member__c/fields/Total_Pledge_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Pledge_Amounts__c</fullName>
    <inlineHelpText>All Time Ended Pledge Amounts</inlineHelpText>
    <label>Total Pledge Amounts</label>
    <summarizedField>Pledge__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Pledge__c.Status__c</field>
        <operation>equals</operation>
        <value>Ended</value>
    </summaryFilterItems>
    <summaryForeignKey>Pledge__c.Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>