force-app/main/default/objects/Member__c/fields/Yalla_Resident__c.field-meta.xml
<CustomField>
    <fullName>Yalla_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yalla Resident</label>
    <type>Checkbox</type>
</CustomField>