force-app/main/default/objects/Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Response__c</columns>
    <columns>Groups__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Industry__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Members</label>
</ListView>