force-app/main/default/objects/Member__c/listViews/Fundraising_Invitations.listView-meta.xml
<ListView>
    <fullName>Fundraising_Invitations</fullName>
    <columns>NAME</columns>
    <columns>Event_Response__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Response__c</field>
        <operation>notEqual</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Event_Response__c</field>
        <operation>notEqual</operation>
        <value>NA</value>
    </filters>
    <label>Fundraising Invitations</label>
</ListView>