force-app/main/default/objects/Member__c/listViews/Members_without_Pledges.listView-meta.xml
<ListView>
    <fullName>Members_without_Pledges</fullName>
    <columns>NAME</columns>
    <columns>Total_Payments__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Pledge__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Members without Pledges</label>
</ListView>